# micro-db

./: .gitignore  Cargo.toml  README.md
extern-deps/bincode/: .gitignore  Cargo.toml
extern-deps/bincode/derive/: Cargo.toml  readme.md
extern-deps/emballoc-rs/src/: lib.rs
extern-deps/emballoc-rs/src/raw_allocator/: buffer.rs  mod.rs
src/: db.rs  error.rs  file.rs  impls.rs  lib.rs  main.rs  serializer.rs  stream.rs  structures.rs  tests.rs  traits.rs  utils.rs
src/tests/: fixed_size_tests.rs  mod.rs  variable_size_tests.rs
tests/: fixed_size_tests.rs  run_tests.rs  variable_size_tests.rs
