# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "micro-db"
version = "0.1.0"
edition = "2021"


[dependencies]
emballoc = { path = "extern-deps/emballoc-rs" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
