# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "micro-db"
version = "0.1.0"
edition = "2021"


[dependencies.emballoc]
path = "extern-deps/emballoc-rs"
optional = true


[dependencies.bincode]
path = "extern-deps/bincode"
default-features = false
features = ["alloc", "derive"]


[features]
default = ["std"]
std = []
embedded = ["no-std", "alloc"]
no-std = []
alloc = []


[profile.release]
debug = true
